<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/cartoonGANBtn"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:text="@string/CartoonGAN" />

        <Button
            android:id="@+id/styleGAN2Btn"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:text="@string/styleGAN2" />

        <Button
            android:id="@+id/styleTransferBtn"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:text="@string/style_transfer" />

        <Button
            android:id="@+id/AugRealityBtn"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:text="@string/AR" />

        <Button
            android:id="@+id/buttonFilters"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:text="@string/filters" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:text="Button" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:text="Button" />

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>